# HY_capston_design

./: README.md
기계종합설계/ros2_mer/ros2_mer/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
기계종합설계/ros2_mer/ros2_mer/install/aruco_detector/lib/aruco_detector/: aruco_detector_node  aruco_move_node
기계종합설계/ros2_mer/ros2_mer/install/aruco_detector/share/aruco_detector/: package.sh  package.xml
기계종합설계/ros2_mer/ros2_mer/install/aruco_detector_yj_pkg_2/lib/aruco_detector_yj_pkg_2/: aruco_detector_yj_node
기계종합설계/ros2_mer/ros2_mer/install/aruco_detector_yj_pkg_2/share/aruco_detector_yj_pkg_2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
기계종합설계/ros2_mer/ros2_mer/install/cartrash/share/cartrash/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
기계종합설계/ros2_mer/ros2_mer/install/plant_transport/share/plant_transport/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
기계종합설계/ros2_mer/ros2_mer/install/plant_transport/share/plant_transport/launch/: experiment_launch.py  plant_teleop_key_launch.py  plant_transport.launch.py  total2_launch.py  total_launch.py  yj_align_launch.py
기계종합설계/ros2_mer/ros2_mer/src/aruco_detector/: setup.py
기계종합설계/ros2_mer/ros2_mer/src/cartrash/: setup.cfg  setup.py
기계종합설계/ros2_mer/ros2_mer/src/cartrash/config/: rplidar_cartographer.lua
기계종합설계/ros2_mer/ros2_mer/src/cartrash/rviz/: mapping.rviz
기계종합설계/ros2_mer/ros2_mer/src/cartrash/urdf/: lidar.urdf  lidar.xacro  robot_core.xacro
기계종합설계/ros2_mer/ros2_mer/src/marker_align_2/: setup.cfg  setup.py
기계종합설계/ros2_mer/ros2_mer/src/marker_align_2/marker_align_2/: marker_align_node2.py
기계종합설계/ros2_mer/ros2_mer/src/plant_transport/: setup.cfg  setup.py
기계종합설계/ros2_mer/ros2_mer/src/plant_transport/launch/: plant_cart_tel_key_launch.py
기계종합설계/ros2_mer/ros2_mer/src/pump_control/: package.xml  setup.py
기계종합설계/ros2_mer/ros2_mer/src/robot_control/: package.xml  setup.py
기계종합설계/ros2_mer/ros2_mer/src/robot_control/robot_control/: encoder_publisher_node.py  motor_controller_node.py  pid_controller_node.py
(+23 files in other folders)
