<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartrash</name>
  <version>0.0.0</version>
  <description>ROS2 package for 2D SLAM using RPLIDAR A1M8 and Cartographer</description>
  <maintainer email="teamleafia@todo.todo">teamleafia</maintainer>
  <license>Apache-2.0</license>


  <depend>rplidar_ros</depend>
  <depend>cartographer_ros</depend>
  <depend>cartographer_rviz</depend>
  <depend>robot_state_publisher</depend> <!-- Optional: for URDF support -->
  <depend>nav2_map_server</depend> <!-- Optional: for map saving -->
  <depend>geometry_msgs</depend> <!-- Optional: for PoseStamped in Python nodes -->
  <depend>nav_msgs</depend> <!-- Optional: for OccupancyGrid in map handling -->
  <depend>rviz2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
