<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plant_transport</name>
  <version>0.0.0</version>
  <description>Integrated package for plant transport robot</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>aruco_detector</exec_depend>
  <exec_depend>robot_control</exec_depend>
  <exec_depend>pump_control</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>marker_align_2</exec_depend>
  <exec_depend>aruco_detector_yj_pkg_2</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>